--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,12 +14,15 @@ pre {
     font-size: 80%;
 }
 
+video {
+    max-width: 99%;
+}
+
 
 /* 3 Collums */
 
 .col2-group>div {
-    border-top: 1px dotted #333;
-    padding: 1em 1em 0;
+    padding: 0;
 }
 
 @media screen and (min-width: 50em) {
@@ -47,6 +50,8 @@ pre {
 
 button {
     padding: 5px;
+    margin-top: 3px;
+    margin-bottom: 3px;
     font: bold 80% sans-serif;
     border: 2px solid #333;
     border-radius: 5px;
@@ -80,7 +85,7 @@ li {
     list-style-type: none;
     width: 98%;
     margin: 1px;
-    padding: 1px;
+    padding: 5px;
     border: 1px solid #333;
     border-radius: 5px;
 }
